Fixed navbar banners overlap with consistent vh across pages

--- a/app/assets/stylesheets/pages/_tutorial_index_page.scss
+++ b/app/assets/stylesheets/pages/_tutorial_index_page.scss
@@ -21,3 +21,7 @@
     grid-template-columns: 1fr 1fr;
   }
 }
+
+.padding-top {
+  padding-top: 30px;
+}
